.tmux.conf .aliases etc.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,38 +1,35 @@
 ## Shift to C-a, useful when using `vi` mode bash
+## Avoid using C-a, if you use picocom/minicom like which escape by C-a
 ## Shift to ^x? NO if you use Emacs, nano, etc.
-unbind C-b
+set -g prefix M-x
+#set-option -g prefix2 C-b
+
+bind-key ` send-prefix
+bind ^p pasteb
+bind-key C-b send-prefix
+#unbind C-b
 #unbind ^b
 #unbind-key C-b
 #bind-key C-a send-prefix
 #set -g prefix ^x
-set-option -g prefix C-a
-bind a send-prefix
+#bind a send-prefix
+#set-option -g prefix C-a
 
 # Set a shortcut for reloading tmux config
 #bind r source-file ~/.tmux.conf
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
+
+bind-key F7 set-option -g prefix C-b
+bind-key F8 set-option -g prefix `
+
 # Rename terminals
 set-option -g set-titles on
 set-option -g set-titles-string '#(whoami)@#h:#W'
-## `#h` is $(hostname - s)
+## `#h` is $(hostname -s)
 ## `#W` is Window name
 
-# Status bar customization
-#show-options -g
-set-option -g display-time 5000
-set-option -g repeat-time 1000
-set-option -g status-bg black
-set-option -g status-fg white
-set-option -g status-keys vi
-set-option -g status-interval 5
-set-option -g status-justify left
-set-option -g status-left-length 90
-#set-option -g status-right '#[fg=Cyan]#S #[fg=blue]%a %d %b %R'
-set-option -g status-right '#[fg=Cyan]#S@#h #[fg=blue]%a %d %b %R'
-set-option -g status-right-length 50
-
-set-window-option -g mode-keys vi
+set -g @shell_mode 'vi'
 
 bind-key z kill-session
 bind-key h select-layout even-horizontal
@@ -103,34 +100,22 @@ bind-key C-l select-window -l
 # t           Show the time.
 # ~           Show previous messages from tmux, if any.
 
-# make the first window number start at 1
-set-option -g base-index 1
-
 #If you have issues scrolling with Shift-Page Up/Down in your terminal, the following will remove the smcup and rmcup capabilities for any term that reports itself as anything beginning with xterm:
 set-option -ga terminal-overrides ',xterm*:smcup@:rmcup@'
-#This tricks the terminal emulator into thinking Tmux is a full screen application like pico or mutt[2], which will make the scrollback be recorded properly. Beware however, it will get a bit messed up when switching between windows/panes. Consider using Tmux's native scrollback instead. 
+#This tricks the terminal emulator into thinking Tmux is a full screen application like mutt, which will make the scrollback be recorded properly.
+#Beware however, it will get a bit messed up when switching between windows/panes. Consider using Tmux's native scrollback instead.
 
+# copy-mode
 # Works in copy-mode with scrollback with `prefix + [`
 # To exit copy-mode, press q in vi mode or ESC in emacs mode;
 #   or `Enter` or `Ctrl-C` in either mode
+bind Escape copy-mode
+#bind-key -T vi-copy v begin-selection
+#bind -Tcopy-mode-vi v send -X begin-selection
+#bind-key -T vi-copy y copy-selection
+#bind -Tcopy-mode-vi y send -X copy-selection
 
-set-option -g history-limit 300000
 
-#For mouse wheel scrolling as from tmux 2.1 try adding one or both of these to ~/.tmux.conf
-
-#bind -T root WheelUpPane   if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
-#bind -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
-
-# the above will only scroll one line at a time, add this solution to scroll an entire page instead
-
-#bind -t vi-copy    WheelUpPane   page-up
-#bind -t vi-copy    WheelDownPane page-down
-#bind -t emacs-copy WheelUpPane   page-up
-#bind -t emacs-copy WheelDownPane page-down
-
-# use | and - to split the windows
-bind-key | split-window -h
-bind-key - split-window -v
 ## tmux neovim
 #  - ERROR: escape-time (500) is higher than 300ms
 #    - SUGGESTIONS:
@@ -150,13 +135,60 @@ set-option -g default-terminal "screen-256color"
 
 
 # git clone https://github.com/tmux-plugins/tmux-continuum.git ~/.tmux/tmux-continuum
-run-shell ~/.tmux/tmux-continuum/continuum.tmux
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
-set -g @shell_mode 'vi'
+#run-shell ~/.tmux/tmux-continuum/continuum.tmux
 
-#set -g @plugin 'tmux-plugins/tpm'
-#set -g @plugin 'tmux-plugins/tmux-sensible'
-#set -g @plugin 'tmux-plugins/tmux-yank'
-#
 #run '~/.tmux/plugins/tpm/tpm'
+
+bind '~' split-window "exec htop"
+bind m command-prompt "split-window 'exec man %%'"
+bind-key | split-window -h
+bind-key - split-window -v
+bind h split-window -h
+bind v split-window -v
+
+# Select prev/next pane
+bind i select-pane -t :.-
+bind o select-pane -t :.+
+
+# -- Options ------------------------------------------------------------{{{1
+# make the first window number start at 1
+set-option -g base-index 1
+set-option -g history-limit 300000
+#set-option -g default-command zsh
+set-option -g bell-action any
+
+set-window-option -g mode-keys vi
+set-window-option -g monitor-activity on
+
+
+# -- Status bar ---------------------------------------------------------{{{1
+set-option -g status-justify left
+set-option -g status-bg default
+set-option -g status-fg magenta
+set-option -g status-left-length 90
+
+set-window-option -g window-status-current-attr bold
+set-window-option -g window-status-current-fg white
+
+if '[ -z "$DISPLAY" -o -n "$SSH_CONNECTION" ]' 'set -g status-right "#[fg=bold]-- #[default]#[fg=yellow]#(cat /proc/loadavg | cut -d \" \" -f 1,2,3) #[fg=cyan,bright]%H:%M #[fg=bold]--"'
+if '[ -z "$DISPLAY" -o -n "$SSH_CONNECTION" ]' 'set -g status-right-length 50'
+
+set-option -g set-titles on
+set-option -g set-titles-string "#H / #S"
+
+set-option -g message-attr bold
+set-option -g message-bg black
+set-option -g message-fg yellow
+#show-options -g
+set-option -g display-time 2000
+set-option -g repeat-time 1000
+set-option -g status-interval 5
+set-option -g status-right '#[fg=Cyan,Bold]#h.#[fg=yellow]#S #[fg=blue]%a %d %b %R#[default]'
+set-option -g status-keys vi
+
+#set-environment -g LC_TMUX_SESSION 1
 
