--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -1,24 +1,33 @@
 ## Shift to C-a, useful when using `vi` mode bash
 ## Avoid using C-a, if you use picocom/minicom like which escape by C-a
 ## Shift to ^x? NO if you use Emacs, nano, etc.
-set -g prefix M-x
+###
+#set -g prefix M-x
+###
 #set-option -g prefix2 C-b
-
-bind-key ` send-prefix
-bind ^p pasteb
-bind-key C-b send-prefix
+#bind-key C-b send-prefix
 #unbind C-b
 #unbind ^b
 #unbind-key C-b
 #bind-key C-a send-prefix
 #set -g prefix ^x
 #bind a send-prefix
-#set-option -g prefix C-a
+set-option -g prefix C-a
+
+
+bind-key ` send-prefix
+
+
+bind Escape copy-mode
+bind ^p pasteb
+#bind-key -T vi-copy v begin-selection
+#bind -Tcopy-mode-vi v send -X begin-selection
+#bind-key -T vi-copy y copy-selection
+#bind -Tcopy-mode-vi y send -X copy-selection
 
 # Set a shortcut for reloading tmux config
 #bind r source-file ~/.tmux.conf
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
-
 
 bind-key F7 set-option -g prefix C-b
 bind-key F8 set-option -g prefix `
@@ -29,7 +38,6 @@ set-option -g set-titles-string '#(whoami)@#h:#W'
 ## `#h` is $(hostname -s)
 ## `#W` is Window name
 
-set -g @shell_mode 'vi'
 
 bind-key z kill-session
 bind-key h select-layout even-horizontal
@@ -102,19 +110,23 @@ bind-key C-l select-window -l
 
 #If you have issues scrolling with Shift-Page Up/Down in your terminal, the following will remove the smcup and rmcup capabilities for any term that reports itself as anything beginning with xterm:
 set-option -ga terminal-overrides ',xterm*:smcup@:rmcup@'
-#This tricks the terminal emulator into thinking Tmux is a full screen application like mutt, which will make the scrollback be recorded properly.
-#Beware however, it will get a bit messed up when switching between windows/panes. Consider using Tmux's native scrollback instead.
+#This tricks the terminal emulator into thinking Tmux is a full screen application like pico or mutt[2], which will make the scrollback be recorded properly. Beware however, it will get a bit messed up when switching between windows/panes. Consider using Tmux's native scrollback instead. 
 
-# copy-mode
 # Works in copy-mode with scrollback with `prefix + [`
 # To exit copy-mode, press q in vi mode or ESC in emacs mode;
 #   or `Enter` or `Ctrl-C` in either mode
-bind Escape copy-mode
-#bind-key -T vi-copy v begin-selection
-#bind -Tcopy-mode-vi v send -X begin-selection
-#bind-key -T vi-copy y copy-selection
-#bind -Tcopy-mode-vi y send -X copy-selection
 
+#For mouse wheel scrolling as from tmux 2.1 try adding one or both of these to ~/.tmux.conf
+
+#bind -T root WheelUpPane   if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
+#bind -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
+
+# the above will only scroll one line at a time, add this solution to scroll an entire page instead
+
+#bind -t vi-copy    WheelUpPane   page-up
+#bind -t vi-copy    WheelDownPane page-down
+#bind -t emacs-copy WheelUpPane   page-up
+#bind -t emacs-copy WheelDownPane page-down
 
 ## tmux neovim
 #  - ERROR: escape-time (500) is higher than 300ms
@@ -127,28 +139,26 @@ set-option -sg escape-time 10
 #  - ERROR: $TERM should be "screen-256color" or "tmux-256color" when running tmux.
 #    - SUGGESTIONS:
 #      - Set default-terminal in ~/.tmux.conf:
-set-option -g default-terminal "screen-256color"
+set-option -g default-terminal "xterm-256color"
+# working with "screen-256color"
 # Not working with "tmux-256color"
 # Not working with "tmux+256color"
 #      - See https://github.com/neovim/neovim/wiki/FAQ
 # Make sure tmux knows that terminal it is running in support 256 colors. You may tell it tmux by using -2 option when launching it.
 
 
-# git clone https://github.com/tmux-plugins/tmux-continuum.git ~/.tmux/tmux-continuum
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
-
-#run-shell ~/.tmux/tmux-continuum/continuum.tmux
-
-#run '~/.tmux/plugins/tpm/tpm'
 
 bind '~' split-window "exec htop"
 bind m command-prompt "split-window 'exec man %%'"
+
+# Adding panes
+# ctl + b %
 bind-key | split-window -h
-bind-key - split-window -v
 bind h split-window -h
+bind-key - split-window -v
+# ctl + b "
 bind v split-window -v
+
 
 # Select prev/next pane
 bind i select-pane -t :.-
@@ -164,31 +174,90 @@ set-option -g bell-action any
 set-window-option -g mode-keys vi
 set-window-option -g monitor-activity on
 
+set-option -g set-titles on
+set-option -g set-titles-string "#H / #S"
+
+set-option -g message-attr bold
+set-option -g message-fg yellow
+set-option -g message-bg black
+set-option -g display-time 2000
+
+#set-environment -g LC_TMUX_SESSION 1
 
 # -- Status bar ---------------------------------------------------------{{{1
 set-option -g status-justify left
 set-option -g status-bg default
 set-option -g status-fg magenta
-set-option -g status-left-length 90
+#set-option -g status-left-length 80
 
 set-window-option -g window-status-current-attr bold
 set-window-option -g window-status-current-fg white
 
-if '[ -z "$DISPLAY" -o -n "$SSH_CONNECTION" ]' 'set -g status-right "#[fg=bold]-- #[default]#[fg=yellow]#(cat /proc/loadavg | cut -d \" \" -f 1,2,3) #[fg=cyan,bright]%H:%M #[fg=bold]--"'
-if '[ -z "$DISPLAY" -o -n "$SSH_CONNECTION" ]' 'set -g status-right-length 50'
+if '[ -z "$DISPLAY" -o -n "$SSH_CONNECTION" ]' 'set -g status-right "#[fg=black,bold]-- #[default]#[fg=yellow]#(cat /proc/loadavg | cut -d \" \" -f 1,2,3) #[fg=cyan,bright]%H:%M #[fg=black,bold]--"'
+if '[ -z "$DISPLAY" -o -n "$SSH_CONNECTION" ]' 'set -g status-right-length 80'
 
-set-option -g set-titles on
-set-option -g set-titles-string "#H / #S"
-
-set-option -g message-attr bold
-set-option -g message-bg black
-set-option -g message-fg yellow
 #show-options -g
-set-option -g display-time 2000
+set-option -g display-time 5000
 set-option -g repeat-time 1000
+set-option -g status-bg black
+set-option -g status-fg white
 set-option -g status-interval 5
-set-option -g status-right '#[fg=Cyan,Bold]#h.#[fg=yellow]#S #[fg=blue]%a %d %b %R#[default]'
+set-option -g status-justify left
+#set-option -g status-left-length 90
+set -g status-left '#[fg=Cyan,Bold]#H.#[fg=yellow]#S '
+#set-option -g status-right-length 50
+set-option -g status-right '#[fg=blue]%a %d %b %R #h#[default]'
+
 set-option -g status-keys vi
 
-#set-environment -g LC_TMUX_SESSION 1
+# Mouse
+# For mouse wheel scrolling from tmux 2.1
+#bind -T root WheelUpPane   if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
+#bind -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
+
+# the above will only scroll one line at a time, add this solution to scroll an entire page instead
+#bind -t vi-copy    WheelUpPane   page-up
+#bind -t vi-copy    WheelDownPane page-down
+#bind -t emacs-copy WheelUpPane   page-up
+#bind -t emacs-copy WheelDownPane page-down
+
+# Works in copy-mode with scrollback with `prefix + [`
+# To exit copy-mode, press q in vi mode or ESC in emacs mode;
+#   or `Enter` or `Ctrl-C` in either mode
+
+
+
+#Put this at the bottom of ~/.tmux.conf ($XDG_CONFIG_HOME/tmux/tmux.conf works too):
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @yank_selection 'primary' # or 'secondary' or 'clipboard'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+#set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-logging'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-restore 'on'
+
+##This isn't needed with `tmux` 2.4 or newer.
+#set -g @shell_mode 'vi'
+
+
+#tmux-copycat - a plugin for regex searches in tmux and fast match selection
+#tmux-yank - enables copying highlighted text to system clipboard
+#tmux-open - a plugin for quickly opening highlighted file or a url
+#tmux-continuum - automatic restoring and continuous saving of tmux env
+
+#Hit prefix + I to fetch the plugin and source it. You should now be able to use the plugin.
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
+
+#run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
 
