--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -226,6 +226,14 @@ set-option -g status-keys vi
 #   or `Enter` or `Ctrl-C` in either mode
 
 
+##This isn't needed with `tmux` 2.4 or newer.
+#set -g @shell_mode 'vi'
+
+
+#tmux-copycat - a plugin for regex searches in tmux and fast match selection
+#tmux-yank - enables copying highlighted text to system clipboard
+#tmux-open - a plugin for quickly opening highlighted file or a url
+#tmux-continuum - automatic restoring and continuous saving of tmux env
 
 #Put this at the bottom of ~/.tmux.conf ($XDG_CONFIG_HOME/tmux/tmux.conf works too):
 # List of plugins
@@ -240,24 +248,15 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on'
 
-##This isn't needed with `tmux` 2.4 or newer.
-#set -g @shell_mode 'vi'
-
-
-#tmux-copycat - a plugin for regex searches in tmux and fast match selection
-#tmux-yank - enables copying highlighted text to system clipboard
-#tmux-open - a plugin for quickly opening highlighted file or a url
-#tmux-continuum - automatic restoring and continuous saving of tmux env
-
-#Hit prefix + I to fetch the plugin and source it. You should now be able to use the plugin.
-
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com/user/plugin'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run -b '~/.tmux/plugins/tpm/tpm'
-
 #run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
 
+# All you need to do is clone the tpm repo, add the run line, reload tmux
+# git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
+#Hit prefix + I to fetch the plugin and source it. You should now be able to use the plugin.
