Always display loadavg, week number, etc.

--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -185,28 +185,20 @@ set-option -g display-time 2000
 #set-environment -g LC_TMUX_SESSION 1
 
 # -- Status bar ---------------------------------------------------------{{{1
-set-option -g status-justify left
-set-option -g status-bg default
-set-option -g status-fg magenta
-#set-option -g status-left-length 80
-
 set-window-option -g window-status-current-attr bold
 set-window-option -g window-status-current-fg white
-
-if '[ -z "$DISPLAY" -o -n "$SSH_CONNECTION" ]' 'set -g status-right "#[fg=black,bold]-- #[default]#[fg=yellow]#(cat /proc/loadavg | cut -d \" \" -f 1,2,3) #[fg=cyan,bright]%H:%M #[fg=black,bold]--"'
-if '[ -z "$DISPLAY" -o -n "$SSH_CONNECTION" ]' 'set -g status-right-length 80'
 
 #show-options -g
 set-option -g display-time 5000
 set-option -g repeat-time 1000
-set-option -g status-bg black
-set-option -g status-fg white
-set-option -g status-interval 5
 set-option -g status-justify left
-#set-option -g status-left-length 90
+set-option -g status-interval 5
+set-option -g status-bg default
+set-option -g status-fg magenta
+set-option -g status-left-length 190
 set -g status-left '#[fg=Cyan,Bold]#H.#[fg=yellow]#S '
-#set-option -g status-right-length 50
-set-option -g status-right '#[fg=blue]%a %d %b %R #h#[default]'
+set -g status-right "#[fg=Cyan,Bright]#(cat /proc/loadavg | cut -d \" \" -f 1,2,3) %V.%u %m%d %R"
+if '[ -z "$DISPLAY" -o -n "$SSH_CONNECTION" ]' 'set -g status-right-length 180'
 
 set-option -g status-keys vi
 
@@ -226,14 +218,6 @@ set-option -g status-keys vi
 #   or `Enter` or `Ctrl-C` in either mode
 
 
-##This isn't needed with `tmux` 2.4 or newer.
-#set -g @shell_mode 'vi'
-
-
-#tmux-copycat - a plugin for regex searches in tmux and fast match selection
-#tmux-yank - enables copying highlighted text to system clipboard
-#tmux-open - a plugin for quickly opening highlighted file or a url
-#tmux-continuum - automatic restoring and continuous saving of tmux env
 
 #Put this at the bottom of ~/.tmux.conf ($XDG_CONFIG_HOME/tmux/tmux.conf works too):
 # List of plugins
@@ -248,15 +232,23 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on'
 
+##This isn't needed with `tmux` 2.4 or newer.
+#set -g @shell_mode 'vi'
+
+
+#tmux-copycat - a plugin for regex searches in tmux and fast match selection
+#tmux-yank - enables copying highlighted text to system clipboard
+#tmux-open - a plugin for quickly opening highlighted file or a url
+#tmux-continuum - automatic restoring and continuous saving of tmux env
+
+#Hit prefix + I to fetch the plugin and source it. You should now be able to use the plugin.
+
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com/user/plugin'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
 
-#run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
-
-# All you need to do is clone the tpm repo, add the run line, reload tmux
-# git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
-#Hit prefix + I to fetch the plugin and source it. You should now be able to use the plugin.
+
+#run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
