.tmux.conf .xinitrc etc.

--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -116,18 +116,6 @@ set-option -ga terminal-overrides ',xterm*:smcup@:rmcup@'
 # To exit copy-mode, press q in vi mode or ESC in emacs mode;
 #   or `Enter` or `Ctrl-C` in either mode
 
-#For mouse wheel scrolling as from tmux 2.1 try adding one or both of these to ~/.tmux.conf
-
-#bind -T root WheelUpPane   if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
-#bind -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
-
-# the above will only scroll one line at a time, add this solution to scroll an entire page instead
-
-#bind -t vi-copy    WheelUpPane   page-up
-#bind -t vi-copy    WheelDownPane page-down
-#bind -t emacs-copy WheelUpPane   page-up
-#bind -t emacs-copy WheelDownPane page-down
-
 ## tmux neovim
 #  - ERROR: escape-time (500) is higher than 300ms
 #    - SUGGESTIONS:
@@ -147,7 +135,6 @@ set-option -g default-terminal "xterm-256color"
 # Make sure tmux knows that terminal it is running in support 256 colors. You may tell it tmux by using -2 option when launching it.
 
 
-
 bind '~' split-window "exec htop"
 bind m command-prompt "split-window 'exec man %%'"
 
@@ -164,6 +151,18 @@ bind v split-window -v
 bind i select-pane -t :.-
 bind o select-pane -t :.+
 
+
+# anaconda environment
+bind -n M-tab next
+bind -n F1 list-keys
+
+#set-option -s exit-unattached off
+#set-option -g set-remain-on-exit on
+
+#new-session -s anaconda -n main "anaconda"
+# END anaconda environment
+
+
 # -- Options ------------------------------------------------------------{{{1
 # make the first window number start at 1
 set-option -g base-index 1
@@ -172,6 +171,7 @@ set-option -g history-limit 300000
 set-option -g bell-action any
 
 set-window-option -g mode-keys vi
+set-option -g status-keys vi
 set-window-option -g monitor-activity on
 
 set-option -g set-titles on
@@ -200,26 +200,6 @@ set -g status-left '#[fg=Cyan,Bold]#H.#[fg=yellow]#S '
 set -g status-right "#[fg=Cyan,Bright]#(cat /proc/loadavg | cut -d \" \" -f 1,2,3) %V.%u %m%d %R"
 if '[ -z "$DISPLAY" -o -n "$SSH_CONNECTION" ]' 'set -g status-right-length 180'
 
-set-option -g status-keys vi
-
-# Mouse
-# For mouse wheel scrolling from tmux 2.1
-#bind -T root WheelUpPane   if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
-#bind -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
-
-# the above will only scroll one line at a time, add this solution to scroll an entire page instead
-#bind -t vi-copy    WheelUpPane   page-up
-#bind -t vi-copy    WheelDownPane page-down
-#bind -t emacs-copy WheelUpPane   page-up
-#bind -t emacs-copy WheelDownPane page-down
-
-# Works in copy-mode with scrollback with `prefix + [`
-# To exit copy-mode, press q in vi mode or ESC in emacs mode;
-#   or `Enter` or `Ctrl-C` in either mode
-
-
-
-#Put this at the bottom of ~/.tmux.conf ($XDG_CONFIG_HOME/tmux/tmux.conf works too):
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
