Status pane will be unseen when loses focus
Status of current pane will be unseen when it loses focus, root cause unknown yet.
Force it black just as workaround.

--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -178,8 +178,9 @@ set-option -g set-titles on
 set-option -g set-titles-string "#H / #S"
 
 set-option -g message-attr bold
-set-option -g message-fg yellow
+#set-option -g message-bg black
 set-option -g message-bg black
+set-option -g message-fg yellow
 set-option -g display-time 2000
 
 #set-environment -g LC_TMUX_SESSION 1
@@ -193,8 +194,9 @@ set-option -g display-time 5000
 set-option -g repeat-time 1000
 set-option -g status-justify left
 set-option -g status-interval 5
-set-option -g status-bg default
-set-option -g status-fg magenta
+set-option -g status-bg black
+#set-option -g status-bg default
+set-option -g status-fg Cyan
 set-option -g status-left-length 190
 set -g status-left '#[fg=Cyan,Bold]#H.#[fg=yellow]#S '
 set -g status-right "#[fg=Cyan,Bright]#(cat /proc/loadavg | cut -d \" \" -f 1,2,3) %V.%u %m%d %R"
