--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -1,7 +1,7 @@
 ## Shift to C-a, useful when using `vi` mode bash
 ## Avoid using C-a, if you use picocom/minicom like which escape by C-a
 ## Shift to ^x? NO if you use Emacs, nano, etc.
-###
+
 #set -g prefix M-x
 ###
 #set-option -g prefix2 C-b
@@ -141,15 +141,27 @@ bind m command-prompt "split-window 'exec man %%'"
 # Adding panes
 # ctl + b %
 bind-key | split-window -h
-bind h split-window -h
-bind-key - split-window -v
+#bind h split-window -h
+
+bind - split-window -v
 # ctl + b "
-bind v split-window -v
+#bind v split-window -v
 
 
 # Select prev/next pane
 bind i select-pane -t :.-
 bind o select-pane -t :.+
+
+# Pane movement
+bind-key J command-prompt -p "Join pane from:" "join-pane -s '%%'"
+bind-key S command-prompt -p "Send pane to:" "join-pane -t '%%'"
+# join-pane [-bdhv] [-l size | -p percentage] [-s src-pane] [-t dst-pane]
+#       (alias: joinp)
+#      Like split-window, but instead of splitting
+#      dst-pane and creating a new pane, split it and
+#      move src-pane into the space.  This can be used
+#      to reverse break-pane.
+# the full path takes 2 arguments: window_number.pane_number
 
 
 # anaconda environment
@@ -171,13 +183,16 @@ set-option -g history-limit 300000
 set-option -g bell-action any
 
 set-window-option -g mode-keys vi
+#setw -g mode-keys vi
 set-option -g status-keys vi
 set-window-option -g monitor-activity on
 
 set-option -g set-titles on
 set-option -g set-titles-string "#H / #S"
 
-set-option -g message-attr bold
+## Tue 10 Dec 2019 04:31:05 PM CST
+##set-option -g message-attr bold
+## Tue 10 Dec 2019 04:31:05 PM CST
 #set-option -g message-bg black
 set-option -g message-bg black
 set-option -g message-fg yellow
@@ -217,6 +232,52 @@ set -g @continuum-restore 'on'
 ##This isn't needed with `tmux` 2.4 or newer.
 #set -g @shell_mode 'vi'
 
+#set -g status-utf8 on
+#setw -g utf8 on
+
+##设置状态栏
+#set-window-option -g window-status-format "#[fg=colour0, bg=colour4]#I###W #[fg=colour0]⮁"
+#set-window-option -g window-status-current-format "#[fg=colour7, bg=colour4]#I###W #[fg=colour0]⮁"
+#set -g status-left ""
+#set -g status-right "⮃ #(~/.myconf/tmuxstatusline.sh)"
+#set -g status-right-length 40
+#set -g status-bg colour4
+#set -g status-fg colour0
+#set -g status-interval 2
+#
+##切换上一个窗口
+#bind ^g last-window
+#
+##分割面板
+#unbind '"'
+#bind - splitw -v #水平分割
+#unbind '%'
+#bind | splitw -h #垂直分割
+#
+##切换面板
+#unbind l
+#bind j select-pane -D
+#bind k select-pane -U
+#bind h select-pane -L
+#bind l select-pane -R
+#
+##调整面板大小
+#bind ^j resizep -D 2
+#bind ^k resizep -U 2
+#bind ^h resizep -L 2
+#bind ^l resizep -R 2
+#
+##交换面板
+#bind ^u swapp -U
+#bind ^d swapp -D
+#
+##面板边框颜色
+#set -g pane-border-fg default
+#set -g pane-border-bg default
+#set -g pane-active-border-fg green
+#set -g pane-active-border-bg default
+
+#bind : command-prompt
 
 #tmux-copycat - a plugin for regex searches in tmux and fast match selection
 #tmux-yank - enables copying highlighted text to system clipboard
@@ -224,6 +285,8 @@ set -g @continuum-restore 'on'
 #tmux-continuum - automatic restoring and continuous saving of tmux env
 
 #Hit prefix + I to fetch the plugin and source it. You should now be able to use the plugin.
+
+#bind r source ~/.tmux.conf \; display "配置已重新载入"
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
@@ -234,3 +297,4 @@ set -g @continuum-restore 'on'
 run -b '~/.tmux/plugins/tpm/tpm'
 
 #run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
+
