update aliases bashrc profile tmux etc.

--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -14,9 +14,7 @@
 #bind a send-prefix
 set-option -g prefix C-a
 
-
 bind-key ` send-prefix
-
 
 bind Escape copy-mode
 bind ^p pasteb
@@ -43,19 +41,28 @@ bind-key z kill-session
 bind-key h select-layout even-horizontal
 bind-key v select-layout even-vertical
 
-# keybindings to make resizing easier
+# resize-pane
 bind -r C-h resize-pane -L
 bind -r C-j resize-pane -D
 bind -r C-k resize-pane -U
 bind -r C-l resize-pane -R
+#bind ^h resizep -L 2
+#bind ^j resizep -D 2
+#bind ^k resizep -U 2
+#bind ^l resizep -R 2
 
+# select-pane
 bind-key k select-pane -U
 bind-key j select-pane -D
 bind-key h select-pane -L
 bind-key l select-pane -R
+# swap pane
+#bind ^u swapp -U
+#bind ^d swapp -D
 
-#select last window, `C-a C-l`, not `C-a l`
-bind-key C-l select-window -l
+# L           Switch the attached client back to the last session.
+#bind ^g last-window
+bind-key g select-window -l
 #TODO: to clear in bash VI mode
 
 # f           Prompt to search for text in open windows.
@@ -101,7 +108,6 @@ bind-key C-l select-window -l
 # C-z         Suspend the tmux client.
 # $           Rename the current session.
 # s           Select a new session for the attached client interactively.
-# L           Switch the attached client back to the last session.
 # d           Detach the current client.
 # D           Choose a client to detach.
 # r           Force redraw of the attached client.
@@ -110,7 +116,7 @@ bind-key C-l select-window -l
 
 #If you have issues scrolling with Shift-Page Up/Down in your terminal, the following will remove the smcup and rmcup capabilities for any term that reports itself as anything beginning with xterm:
 set-option -ga terminal-overrides ',xterm*:smcup@:rmcup@'
-#This tricks the terminal emulator into thinking Tmux is a full screen application like pico or mutt[2], which will make the scrollback be recorded properly. Beware however, it will get a bit messed up when switching between windows/panes. Consider using Tmux's native scrollback instead. 
+#This tricks the terminal emulator into thinking Tmux is a full screen application like pico or mutt[2], which will make the scrollback be recorded properly. Beware however, it will get a bit messed up when switching between windows/panes. Consider using Tmux's native scrollback instead.
 
 # Works in copy-mode with scrollback with `prefix + [`
 # To exit copy-mode, press q in vi mode or ESC in emacs mode;
@@ -138,14 +144,14 @@ set-option -g default-terminal "xterm-256color"
 bind '~' split-window "exec htop"
 bind m command-prompt "split-window 'exec man %%'"
 
-# Adding panes
-# ctl + b %
-bind-key | split-window -h
-#bind h split-window -h
 
+# Adding panes
+#unbind '"'
 bind - split-window -v
-# ctl + b "
-#bind v split-window -v
+
+#unbind '%'
+bind-key | split-window -h
+#bind | splitw -h
 
 
 # Select prev/next pane
@@ -193,9 +199,6 @@ set-option -g set-titles-string "#H / #S"
 ## Tue 10 Dec 2019 04:31:05 PM CST
 ##set-option -g message-attr bold
 ## Tue 10 Dec 2019 04:31:05 PM CST
-#set-option -g message-bg black
-set-option -g message-bg black
-set-option -g message-fg yellow
 set-option -g display-time 2000
 
 #set-environment -g LC_TMUX_SESSION 1
@@ -244,33 +247,8 @@ set -g @continuum-restore 'on'
 #set -g status-bg colour4
 #set -g status-fg colour0
 #set -g status-interval 2
-#
-##切换上一个窗口
-#bind ^g last-window
-#
-##分割面板
-#unbind '"'
-#bind - splitw -v #水平分割
-#unbind '%'
-#bind | splitw -h #垂直分割
-#
-##切换面板
-#unbind l
-#bind j select-pane -D
-#bind k select-pane -U
-#bind h select-pane -L
-#bind l select-pane -R
-#
-##调整面板大小
-#bind ^j resizep -D 2
-#bind ^k resizep -U 2
-#bind ^h resizep -L 2
-#bind ^l resizep -R 2
-#
-##交换面板
-#bind ^u swapp -U
-#bind ^d swapp -D
-#
+
+
 ##面板边框颜色
 #set -g pane-border-fg default
 #set -g pane-border-bg default
