--- a/.minttyrc
+++ b/.minttyrc
@@ -1,11 +1,10 @@
-BoldAsFont=yes
-OpaqueWhenFocused=yes
-FontSmoothing=full
-Scrollbar=none
-Font=Consolas
-FontHeight=12
-AllowBlinking=yes
-Locale=C
-Charset=UTF-8
-BellFlash=yes
+ThemeFile=dracula
+Transparency=glass
+OpaqueWhenFocused=no
 CursorType=block
+FontSmoothing=full
+ScrollbackLines=1000000
+Scrollbar=none
+Term=xterm-256color
+Font=SimHei
+FontHeight=11
