--- a/.minttyrc
+++ b/.minttyrc
@@ -6,5 +6,12 @@ FontSmoothing=full
 ScrollbackLines=1000000
 Scrollbar=none
 Term=xterm-256color
+BoldAsFont=no
+BoldAsColour=yes
+Charset=UTF-8
+AllowSetSelection=yes
+Language=en
 Font=SimHei
-FontHeight=11
+FontHeight=12
+FontWeight=400
+FontIsBold=no
