--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -41,9 +41,8 @@ set -g set-titles-string "#H / #S"
 set -g status-bg red
 %endif
 
-# XXXX
-# Keep windows around after they exit
-#set -g remain-on-exit on
+## Keep windows around after they exit
+##set -g remain-on-exit on
 
 # Some extra key bindings to select higher numbered windows
 bind F1 selectw -t:10
@@ -144,7 +143,6 @@ bind g select-window -l
 # !           Break the current pane out of the window.
 # C-o         Rotate the panes in the current window forwards.
 # M-o         Rotate the panes in the current window backwards.
-#             Change to the pane above, below, to the left, or to the right of the current pane.
 # M-1 to M-5  Arrange panes in one of the five preset layouts: even-horizontal, even-vertical, main-horizontal, main-vertical, or tiled.
 # C-Up, C-Down
 # C-Left, C-Right
@@ -255,25 +253,28 @@ set -g status-position bottom
 setw -g mode-keys vi
 set -g status-keys vi
 
+set -g status-interval 5               # set update frequencey (default 15 seconds)
+#set -g status-justify left
+set -g status-justify centre
+
+# host info
+set -g status-left "#S@#H #(curl icanhazip.com) #(ip a show tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
+# #h host
+# #H FQDN host
 # show session name, window & pane number, date and time on right side
 #set -g status-right "⮃ #(~/.myconf/tmuxstatusline.sh)"
 set -g status-right "#[fg=blue]#(tmux-cpu --no-color)"
 set -g status-right "#[fg=Cyan,Bright]#(cat /proc/loadavg | cut -d \" \" -f 1,2,3) %V.%u %m%d %R"
-set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
-set -g status-right "#[fg=blue]#S #I:#P #[fg=yellow]: %d %b %Y #[fg=green]: %l:%M %p : #(date -u | awk '{print $4}') :"
-set -g status-right "#(uptime|awk '{print $11}') #(date)"
-set -g status-attr dim
-setw -g window-status-attr none
-setw -g window-status-attr reverse
-set -g window-status-current-attr "underscore"
-setw -g window-status-current-attr bright,reverse
-setw -g window-status-current-bg cyan
-setw -g window-status-current-fg black
-set -g window-status-current-style "underscore"
+set -g status-right "#I:#P : %d/%m %H:%M:%S"
+#show-options -g
+if '[ -z "$DISPLAY" -o -n "$SSH_CONNECTION" ]' 'set -g status-right-length 180'
 
-set -g status-interval 5               # set update frequencey (default 15 seconds)
-#set -g status-justify left
-set -g status-justify centre           # center window list for clarity
+# %H 24-hour hour
+# %l 12-hour hour
+# %d day of month
+# %m month of year
+# %b month name
+# %p AM/PM
 
 #setw -g window-status-format "#[fg=colour0, bg=colour4]#I###W #[fg=colour0]⮁"
 #setw -g window-status-current-format "#[fg=colour7, bg=colour4]#I###W #[fg=colour0]⮁"
@@ -286,30 +287,23 @@ setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244
 #set -g status-bg colour235 #base02
 #set -g status-fg colour137
 
-# set window list colors - red for active and cyan for inactive
+# window list colors
 setw -g window-status-fg colour138
 setw -g window-status-bg colour235
 setw -g window-status-current-fg colour81
 setw -g window-status-current-bg colour238
-setw -g window-status-current-attr dim
 
 ## Background windows with event
 setw -g window-status-bell-fg colour255
 setw -g window-status-bell-bg colour7
-setw -g window-status-bell-attr bold
-
-
-# show host name and IP address on left side of status bar
-#set -g status-left ""
-set -g status-left "#[fg=colour198]: #h : #[fg=brightblue]#(curl icanhazip.com) #(ifconfig en0 | grep 'inet ' | awk '{print \"en0 \" $2}') #(ifconfig en1 | grep 'inet ' | awk '{print \"en1 \" $2}') #(ifconfig en3 | grep 'inet ' | awk '{print \"en3 \" $2}') #(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
-
 
 ##This isn't needed with `tmux` 2.4 or newer.
 #set -g @shell_mode 'vi'
 
 # mouse mode (commented lines for old versions of tmux)
 # Turn the mouse on, but without copy mode dragging
-set -g mouse on
+#set -g mouse on
+set -g mouse off
 unbind -n MouseDrag1Pane
 unbind -Tcopy-mode MouseDrag1Pane
 
@@ -320,15 +314,9 @@ unbind -Tcopy-mode MouseDrag1Pane
 #bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
 #bind -n WheelDownPane select-pane -t= \; send-keys -M
 
-#show-options -g
-set -g status-right-length 60
-set -g status-left-length 190
-if '[ -z "$DISPLAY" -o -n "$SSH_CONNECTION" ]' 'set -g status-right-length 180'
-
 # modes {
 #window mode
 setw -g clock-mode-colour colour135
-setw -g mode-attr bold
 setw -g mode-fg colour196
 setw -g mode-bg colour238
 # }
@@ -351,11 +339,9 @@ set -g message-fg colour232
 set -g message-bg colour14
 set -g message-command-fg colour14
 set -g message-command-bg colour232
-set -g message-attr bold
 set -g display-time 5000
 set -g repeat-time 1000
 # }
-
 
 
 # Bind function keys.
@@ -370,9 +356,11 @@ bind -n F8 select-window -t 8
 
 #bind : command-prompt
 
-#bind = bind
-#source = source-file
-#setw = set-window
+#bind-key -> bind
+#source -> source-file
+#set-window -> setw
+#setw -> set
+#attr -> style
 
 # colors
 ## black:  colour232
@@ -383,17 +371,8 @@ bind -n F8 select-window -t 8
 ## attention: colour202
 ## decoration: colour12
 
-
 # default start/restart
 #select-window -t 1
-
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'git@github.com/user/plugin'
-# set -g @plugin 'git@bitbucket.com/user/plugin'
-
-# tmux-continuum
-set -g @continuum-restore 'on'
 
 # gobust
 # revshell
@@ -428,9 +407,13 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 #tmux-yank - enables copying highlighted text to system clipboard
 #tmux-open - a plugin for quickly opening highlighted file or a url
 #tmux-continuum - automatic restoring and continuous saving of tmux env
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
+
+# tmux-continuum
+set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
 #run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
-
 
