.aliases .tmux.conf

--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -1,5 +1,3 @@
-# .tmux.conf
-
 ## Shift to C-a, useful when using `vi` mode bash
 ## Avoid using C-a, if you use picocom/minicom like which escape by C-a
 ## Shift to ^x? NO if you use Emacs, nano, etc.
@@ -66,7 +64,6 @@ set -g history-limit 300000
 # loud or quiet? visual notification of activity in other windows
 # Notifying if other windows has activities
 setw -g monitor-activity on
-set -t0:0 monitor-activity on
 set -g visual-activity on
 set -g visual-bell off
 set -g visual-silence off
@@ -190,9 +187,9 @@ set -sg escape-time 10
 # Not working with "tmux-256color"
 # Not working with "tmux+256color"
 #      - See https://github.com/neovim/neovim/wiki/FAQ
+set -g default-terminal "tmux-256color"
 set -g default-terminal "xterm-256color"
 set -g default-terminal "screen-256color"
-set -g default-terminal "tmux-256color"
 
 bind '~' split-window "exec htop"
 bind m command-prompt "split-window 'exec man %%'"
@@ -202,7 +199,7 @@ bind m command-prompt "split-window 'exec man %%'"
 bind - split-window -v
 #unbind '%'
 bind | split-window -h
-bind \ split-window -h
+bind \\ split-window -h
 #bind | splitw -h
 
 # Select prev/next pane
@@ -243,9 +240,6 @@ set-option -g allow-rename off
 #set-environment -g LC_TMUX_SESSION 1
 
 # -- Status bar ---------------------------------------------------------{{{1
-#setw -g utf8 on
-set -g status-utf8 on
-set -g status on                # turn the status bar on
 #set -g status-position top
 #setw -g status-position top
 set -g status-position bottom
@@ -287,26 +281,13 @@ setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244
 #set -g status-bg colour235 #base02
 #set -g status-fg colour137
 
-# window list colors
-setw -g window-status-fg colour138
-setw -g window-status-bg colour235
-setw -g window-status-current-fg colour81
-setw -g window-status-current-bg colour238
-
-## Background windows with event
-setw -g window-status-bell-fg colour255
-setw -g window-status-bell-bg colour7
-
 ##This isn't needed with `tmux` 2.4 or newer.
 #set -g @shell_mode 'vi'
 
-# mouse mode (commented lines for old versions of tmux)
 # Turn the mouse on, but without copy mode dragging
-#set -g mouse on
 set -g mouse off
 unbind -n MouseDrag1Pane
 unbind -Tcopy-mode MouseDrag1Pane
-
 ##setw -g mode-mouse on
 ## set -g mouse-resize-pane on
 ## set -g mouse-select-pane on
@@ -317,17 +298,6 @@ unbind -Tcopy-mode MouseDrag1Pane
 # modes {
 #window mode
 setw -g clock-mode-colour colour135
-setw -g mode-fg colour196
-setw -g mode-bg colour238
-# }
-
-# panes {
-set -g pane-border-bg colour235
-set -g pane-border-fg colour238
-
-# divider color
-set -g pane-active-border-bg colour236
-set -g pane-active-border-fg colour51
 # }
 
 ## Highlight current pane
@@ -335,10 +305,6 @@ set -g window-active-style 'fg=colour255,bg=colour232'  # Current pane
 set -g window-style 'fg=colour7,bg=colour234'   # Other panes
 
 # messages {
-set -g message-fg colour232
-set -g message-bg colour14
-set -g message-command-fg colour14
-set -g message-command-bg colour232
 set -g display-time 5000
 set -g repeat-time 1000
 # }
@@ -383,7 +349,6 @@ bind P paste-buffer
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-selection
 bind -T copy-mode-vi r send-keys -X rectangle-toggle
-bind -T vi-copy y copy-pipe "xclip -sel clip -i"
 
 bind Escape copy-mode
 bind ^p pasteb
@@ -416,4 +381,3 @@ set -g @continuum-restore 'on'
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
 #run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
-
