.bashrc .bash_profile

--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -199,7 +199,6 @@ bind m command-prompt "split-window 'exec man %%'"
 bind - split-window -v
 #unbind '%'
 bind | split-window -h
-bind \\ split-window -h
 #bind | splitw -h
 
 # Select prev/next pane
@@ -252,6 +251,7 @@ set -g status-interval 5               # set update frequencey (default 15 secon
 set -g status-justify centre
 
 # host info
+set -g status-left-length 80
 set -g status-left "#S@#H #(curl icanhazip.com) #(ip a show tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
 # #h host
 # #H FQDN host
@@ -261,6 +261,7 @@ set -g status-right "#[fg=blue]#(tmux-cpu --no-color)"
 set -g status-right "#[fg=Cyan,Bright]#(cat /proc/loadavg | cut -d \" \" -f 1,2,3) %V.%u %m%d %R"
 set -g status-right "#I:#P : %d/%m %H:%M:%S"
 #show-options -g
+set -g status-right-length 80
 if '[ -z "$DISPLAY" -o -n "$SSH_CONNECTION" ]' 'set -g status-right-length 180'
 
 # %H 24-hour hour
@@ -273,13 +274,13 @@ if '[ -z "$DISPLAY" -o -n "$SSH_CONNECTION" ]' 'set -g status-right-length 180'
 #setw -g window-status-format "#[fg=colour0, bg=colour4]#I###W #[fg=colour0]⮁"
 #setw -g window-status-current-format "#[fg=colour7, bg=colour4]#I###W #[fg=colour0]⮁"
 setw -g window-status-format " #F#I:#W#F "
-setw -g window-status-format "#[fg=magenta]#[bg=black] #I #[bg=cyan]#[fg=colour8] #W "
-setw -g window-status-current-format "#[bg=brightmagenta]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
+setw -g window-status-format "#[fg=magenta]#I #[fg=colour8] #W "
+setw -g window-status-current-format "#[fg=colour8] #I #[fg=colour8] #W "
 setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
 setw -g window-status-current-format " #F#I:#W#F "
 setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
-#set -g status-bg colour235 #base02
-#set -g status-fg colour137
+set -g status-bg colour238 #base02
+set -g status-fg colour136
 
 ##This isn't needed with `tmux` 2.4 or newer.
 #set -g @shell_mode 'vi'
